# singing_transcription

./: README.md  analyze_pitch_labels.ipynb  best_crepe_4.pkl  pyproject.toml  test_crepe.ipynb
notebooks/: convtasnet.ipynb  metrics.py  test_crepe.ipynb  test_gradio.ipynb  test_read_wav.ipynb
src/: crepe_model.py  pitch_transcription.py  source_sep.py  train_pitch_transcription.py  train_test_split_list.py  utils.py
